--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "iterm2colors",
+  "name": "iterm2-colors",
   "version": "1.0.2",
   "description": "iTerm2 colors as JSON, Sass, Scss, Stylus and Less",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kevin-smets/iterm2colors.git"
+    "url": "git+https://github.com/kevin-smets/iterm2-colors.git"
   },
   "keywords": [
     "iTerm2",
@@ -19,7 +19,7 @@
   "author": "Kevin Smets",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kevin-smets/iterm2colors/issues"
+    "url": "https://github.com/kevin-smets/iterm2-colors-converter/issues"
   },
-  "homepage": "https://github.com/kevin-smets/iterm2colors#readme"
+  "homepage": "https://github.com/kevin-smets/iterm2-colors#readme"
 }
